<resources>
    <string name="app_name">Pop Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="pref_sort_by_label">Sort By</string>
    <string name="pref_sort_by_key" translatable="false">sort_by</string>
    <string name="pref_sort_by_default" translatable="false">@string/pref_sort_by_popular_value</string>

    <string name="pref_sort_by_popular_label">Most Popular</string>
    <string name="pref_sort_by_popular_value" translatable="false">popular</string>

    <string name="pref_sort_by_top_rated_label">Top Rated</string>
    <string name="pref_sort_by_top_rated_value" translatable="false">top_rated</string>

    <string name="pref_sort_by_favorite_label">Favorite</string>
    <string name="pref_sort_by_favorite_value" translatable="false">favorite</string>

    <string name="movie_title">Movie Title</string>
    <string name="movie_date">0000-00-00</string>
    <string name="movie_rate">Rate</string>
    <string name="movie_vote">0.0/10</string>
    <string name="movie_overview">Movie overview........</string>
    <string name="movie_trailer">Trailers</string>
    <string name="trailer_title">Trailer</string>
    <string name="trailer">Trailer 1</string>
    <string name="movie_review">Reviews</string>
    <string name="review_title">Review</string>
    <string name="author">Author</string>
    <string name="author_name">Kuei</string>
    <string name="review">Awesome movie.</string>
    <string name="add_favo">Mark As Favorite</string>
    <string name="remove_favo">Remove From Favorite</string>
    <string name="successfully_add_favo">Successfully marked as Favorite</string>
    <string name="successfully_remove_favo">Successfully removed from Favorite</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="no_trailer">No Trailers Found</string>
    <string name="no_review">No Reviews Found</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmoviesappp2.akueisara.github.io</string>
    <string name="content_authority">io.github.akueisara.popularmoviesappp2</string>
</resources>
