<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/review_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/black"
        tools:text="@string/author"/>


    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="18sp"
        tools:text="@string/author_name"/>

    </LinearLayout>

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="16sp"
        tools:text="@string/review"/>

</LinearLayout>