<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            tools:text="@string/movie_title"
            tools:background="@color/TitleBackGroundColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:textSize="30sp"
                    tools:text="@string/movie_date"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/movie_rate"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="30sp"
                            tools:text="@string/movie_rate" />

                        <TextView
                            android:id="@+id/movie_vote_average"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="25sp"
                            tools:text="@string/movie_vote"/>

                    </LinearLayout>

                    <Button
                        android:visibility="invisible"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/ButtonBackGroundTintColor"
                        android:id="@+id/fav_button"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_weight="1"
                        tools:text="@string/add_favo" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="18sp"
            tools:text="@string/movie_overview"/>

        <TextView
            android:id="@+id/movie_trailer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            tools:text="@string/movie_trailer"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_margin="@dimen/activity_vertical_margin"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/trailer_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

            <TextView
                android:id="@+id/trailer_empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/trailer_loading_indicator"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/movie_review"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            tools:text="@string/movie_review"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:layout_margin="@dimen/activity_vertical_margin"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/review_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/review_empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/review_loading_indicator"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>


    </LinearLayout>


</ScrollView>